# cognite-replicator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  job_template.yaml  pyproject.toml  readthedocs.yml  test copy.py  tox.ini
.github/workflows/: cd.yml  ci.yml  python-publish.yml
cognite/replicator/: __init__.py  __main__.py  assets.py  datapoints.py  datasets.py  events.py  files.py  raw.py  relationships.py  replication.py  sequence_rows.py  sequences.py  time_series.py  utils.py
cognite/replicator/log/: cognite-replicator.log.2022-09-13
cognite_replicator/: __init__.py  assets.py  datapoints.py  events.py  raw.py  replication.py  time_series.py
config/: default.yml  example.yml  local.yml  okd-datapoints.yml  okd-events.yml  okd-files.yml  okd-timeseries.yml  okd.yml
docs/source/: conf.py  index.rst
tests/: test_assets.py  test_cognite_replicator.py  test_datapoints.py  test_events.py  test_files.py  test_main.py  test_raw.py  test_replication.py  test_replicator.py  test_sequences.py  test_timeseries.py
