[tool.poetry]
name = "cognite_replicator"
version = "0.2.1"
description = "Python package for replicating data across CDF tenants. Copyright 2019 Cognite AS"
license = "Apache-2.0"
authors = [
    "Nina Odegard <nina.odegard@cognite.com>",
    "Sofie Haug <sofie.haug@cognite.com>",
    "Torbjørn Opheim <torbjorn.opheim@cognite.com>",
    "Even Wiik Thomassen <even.thomassen@cognite.com>"
]
readme = "README.md"
packages = [
    {include = "cognite"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.6"
cognite-sdk = "^1.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
isort = "^4.3"
pre-commit = "^1.18"
pytest = "^5.1.1"
pytest-cov = "^2.7.1"
twine = "*"

[tool.poetry.scripts]
replicator = 'cognite.replicator.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
)/
'''
