[tool.poetry]
name = "cognite_replicator"
version = "0.5.0"
description = "Python package for replicating data across CDF tenants. Copyright 2019 Cognite AS"
license = "Apache-2.0"
authors = [
    "Even Wiik Thomassen <even.thomassen@cognite.com>",
    "Nina Odegard <nina.odegard@cognite.com>",
    "Sofie Haug <sofie.haug@cognite.com>",
    "Torbjørn Opheim <torbjorn.opheim@cognite.com>",
    "Tristan Monger <tristan.monger@cognite.com>",
]
readme = "README.md"
packages = [
    {include = "cognite"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.6"
cognite-sdk = "^1.1.6"
google-cloud-logging = "^1.12"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
isort = "^4.3"
pre-commit = "^1.18"
pytest = "^5.1.1"
pytest-cov = "^2.7.1"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4"
toml = "^0.10.0"
tox = "^3.0"
tox-pyenv = "^1.0"
twine = "^1.10.0"
yolk3k = "^0.9.0"

[tool.poetry.scripts]
replicator = 'cognite.replicator.__main__:main'

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
