[tool.poetry]
name = "cognite_replicator"
version = "0.9.0"
description = "Python package for replicating data across CDF tenants. Copyright 2019 Cognite AS"
license = "Apache-2.0"
authors = [
    "Even Wiik Thomassen <even.thomassen@cognite.com>",
    "Nina Odegard <nina.odegard@cognite.com>",
    "Sofie Haug <sofie.haug@cognite.com>",
    "Torbjørn Opheim <torbjorn.opheim@cognite.com>",
    "Tristan Monger <tristan.monger@cognite.com>",
]
readme = "README.md"
packages = [
    {include = "cognite"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
cognite-sdk-core = "^1.4.10"
google-cloud-logging = "^1.12"
python = "^3.6"
pyyaml = "^5.1.0"

[tool.poetry.dev-dependencies]
black = {version = "19.3b0", allow-prereleases = true}
isort = "^4.3"
pre-commit = "^1.18"
pytest = "^5.1.1"
pytest-cov = "^2.7.1"
pytest-mock = "^1.11.2"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
toml = "^0.10.0"
tox = "^3.14"
tox-pyenv = "^1.1"
twine = "^3.1.1"
pytz = "*"

[tool.poetry.scripts]
replicator = 'cognite.replicator.__main__:main'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
)/
'''

[tool.tox]
legacy_tox_ini = '''
[tox]
isolated_build = true
envlist = py36,py37,py38

[testenv]
# install pytest in the virtualenv where commands will be executed
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov-report xml:coverage.xml --cov=cognite --junitxml=test-report.xml
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
